import React from 'react'
import { mount } from 'enzyme'
import Link from '../index'

describe('Link', () => {
  it('renders correctly', () => {
    const wrapper = mount(<Link>text</Link>)
    expect(wrapper).toMatchSnapshot()
  })
  it('displays arrow icon when `arrow` is specified', () => {
    const wrapper = mount(<Link arrow="arrow">text</Link>)
    expect(wrapper).toMatchSnapshot()
  })
  it('displays back arrow icon when `backArrow` is specified', () => {
    const wrapper = mount(<Link backArrow="arrow_darkBg">text</Link>)
    expect(wrapper).toMatchSnapshot()
  })
  it('is external url - http', () => {
    const wrapper = mount(<Link to="https://www.astronomer.io">text</Link>)
    expect(wrapper).toMatchSnapshot()
  })
  it('is external url - www', () => {
    const wrapper = mount(<Link to="www.astronomer.io">text</Link>)
    expect(wrapper).toMatchSnapshot()
  })
  // it('is external url - naked', () => {
  //   const wrapper = mount(<Link to="astronomer.io">text</Link>)
  //   expect(wrapper).toMatchSnapshot()
  // })

  // test if link is rendered with Link (react-router)
})
